--- a/style.css
+++ b/style.css
@@ -2,4 +2,7 @@ body {
     height: 100%;
     width: 100%;
     font-family: sans-serif;
+    background-size: cover;
+    background-image: url(https://ih1.redbubble.net/image.26303649.5479/flat,800x800,075,f.u1.jpg);
+    margin-left: 600px;
 }
