--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body {
     background-size: cover;
     background-image: url(https://ih1.redbubble.net/image.26303649.5479/flat,800x800,075,f.u1.jpg);
 }
-div{
+div, footer{
     display: block;
     margin-left: 10%;
 }
