--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@ body {
     font-family: sans-serif;
     background-size: cover;
     background-image: url(https://ih1.redbubble.net/image.26303649.5479/flat,800x800,075,f.u1.jpg);
+    padding-top: 5vh;
 }
 div, footer{
     display: block;
